      lazy-loading in packages with namespaces (which makes it consistent
      with its use for data-only packages without namespaces in earlier
      versions of \R).

      \item There is a new package \pkg{parallel}.\cr
      Currently it contains support for multiple RNG streams following
      L'Ecuyer \emph{et al} (2002).\cr
      (Anything else there is still incomplete.)
    }
  }

  \subsection{NEW FEATURES}{
    \itemize{
      \item \code{txtProgressBar()} can write to an open connection
      instead of the console.

      \item Non-portable package names ending in \file{.} are no longer
      allowed.  Nor are single-character package names (\pkg{R} was
      already disallowed).

      \item \code{regexpr()} and \code{gregexpr()} with \code{perl =
	TRUE} allows Python-style named captures.  (Wish and
      contribution of \PR{14518}.)

      \item The placement of plotmath text in the margins of plots done
      by base graphics now makes the same vertical adjustment as
      ordinary text, so using ordinary and plotmath on the same margin
      line will seem better aligned (but not exactly aligned, since
      ordinary text has descenders below the baseline and plotmath
      places them on the baseline).  (Related to \PR{14537}.)

      \item \code{sunflowerplot()} now has a formula interface.
      (Wish of \PR{14541}.)

      \item \code{iconv()} has a new argument \code{toRaw} to handle (as
      was possible before the \code{CHARSXP} cache was introduced)
      encodings such as \code{UTF-16} with embedded nuls.

      It will also accept as input the type of list generated with
      \code{toRaw = TRUE}.

      \item Garbage-collecting an unused input text connection no longer
      gives a warning (since it \sQuote{connects} to nothing outside
      \R).

      \item \code{read.table()} and \code{scan()} have gained a
      \code{text} argument, to allow reading data from a (possibly
      literal) character string.
