@@ -77,6 +77,7 @@ filter1(double *x, int *n, double *filter, int *nfilt, int *sides,
     }
 }
 
+/* recursive filtering */
 void
 filter2(double *x, int *n, double *filter, int *nfilt, double *out)
 {
@@ -88,7 +89,7 @@ filter2(double *x, int *n, double *filter, int *nfilt, double *out)
 	for (j = 0; j < nf; j++) {
 	    tmp = out[nf + i - j - 1];
 	    if(my_isok(tmp)) sum += tmp * filter[j];
-	    else { out[i] = NA_REAL; goto bad3; }
+	    else { out[nf + i] = NA_REAL; goto bad3; }
 	}
 	out[nf + i] = sum;
     bad3:
