@@ -39,7 +39,7 @@
       \item There is a new package \pkg{parallel}.\cr
       Currently it contains support for multiple RNG streams following
       L'Ecuyer \emph{et al} (2002).\cr
-      (Anything else there is still incomplete.)
+      (Anything else there is still incomplete/experimental.)
     }
   }
 
@@ -697,6 +697,9 @@
       
       \item The HTML generated by \code{Rd2HTML()} comes closer to 
       being standards compliant.
+      
+      \item \code{filter(x, recursive = TRUE)} gave incorrect results on a
+      series containing \code{NA}s.  (Spotted by Bill Dunlap.)
     }  
   }
 }
